# pkg/genproto/rule-diller/api/diller.pb.gw.go
@@ -31,25 +31,19 @@ var _ = runtime.String
 var _ = utilities.NewDoubleArray
 var _ = metadata.Join
 
+var (
+	filter_RuleDillerService_GetRuleStatistic_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+)
+
 func request_RuleDillerService_GetRuleStatistic_0(ctx context.Context, marshaler runtime.Marshaler, client RuleDillerServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq GetRuleStatisticRequest
+	var protoReq GetRuleRequest
 	var metadata runtime.ServerMetadata
 
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["id"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "id")
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-
-	protoReq.Id, err = runtime.String(val)
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_RuleDillerService_GetRuleStatistic_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
 	msg, err := client.GetRuleStatistic(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -58,24 +52,14 @@ func request_RuleDillerService_GetRuleStatistic_0(ctx context.Context, marshaler
 }
 
 func local_request_RuleDillerService_GetRuleStatistic_0(ctx context.Context, marshaler runtime.Marshaler, server RuleDillerServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq GetRuleStatisticRequest
+	var protoReq GetRuleRequest
 	var metadata runtime.ServerMetadata
 
-	var (
-		val string
-		ok  bool
-		err error
-		_   = err
-	)
-
-	val, ok = pathParams["id"]
-	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "id")
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-
-	protoReq.Id, err = runtime.String(val)
-	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "id", err)
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_RuleDillerService_GetRuleStatistic_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
 	msg, err := server.GetRuleStatistic(ctx, &protoReq)
@@ -88,7 +72,7 @@ var (
 )
 
 func request_RuleDillerService_GetRuleData_0(ctx context.Context, marshaler runtime.Marshaler, client RuleDillerServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq GetRuleDataRequest
+	var protoReq GetRuleRequest
 	var metadata runtime.ServerMetadata
 
 	if err := req.ParseForm(); err != nil {
@@ -104,7 +88,7 @@ func request_RuleDillerService_GetRuleData_0(ctx context.Context, marshaler runt
 }
 
 func local_request_RuleDillerService_GetRuleData_0(ctx context.Context, marshaler runtime.Marshaler, server RuleDillerServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq GetRuleDataRequest
+	var protoReq GetRuleRequest
 	var metadata runtime.ServerMetadata
 
 	if err := req.ParseForm(); err != nil {
@@ -133,7 +117,7 @@ func RegisterRuleDillerServiceHandlerServer(ctx context.Context, mux *runtime.Se
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/bandit.services.rulediller.RuleDillerService/GetRuleStatistic", runtime.WithHTTPPathPattern("/v1/diller/rule/statistic/{id}"))
+		annotatedContext, err = runtime.AnnotateIncomingContext(ctx, mux, req, "/bandit.services.rulediller.RuleDillerService/GetRuleStatistic", runtime.WithHTTPPathPattern("/v1/diller/rule/statistic"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -222,7 +206,7 @@ func RegisterRuleDillerServiceHandlerClient(ctx context.Context, mux *runtime.Se
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
 		var err error
 		var annotatedContext context.Context
-		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/bandit.services.rulediller.RuleDillerService/GetRuleStatistic", runtime.WithHTTPPathPattern("/v1/diller/rule/statistic/{id}"))
+		annotatedContext, err = runtime.AnnotateContext(ctx, mux, req, "/bandit.services.rulediller.RuleDillerService/GetRuleStatistic", runtime.WithHTTPPathPattern("/v1/diller/rule/statistic"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
@@ -264,7 +248,7 @@ func RegisterRuleDillerServiceHandlerClient(ctx context.Context, mux *runtime.Se
 }
 
 var (
-	pattern_RuleDillerService_GetRuleStatistic_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"v1", "diller", "rule", "statistic", "id"}, ""))
+	pattern_RuleDillerService_GetRuleStatistic_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "diller", "rule", "statistic"}, ""))
 
 	pattern_RuleDillerService_GetRuleData_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 2, 3}, []string{"v1", "diller", "rule", "data"}, ""))
 )
